added some bullets

--- a/doc/thesis/thesis.tex
+++ b/doc/thesis/thesis.tex
@@ -1044,19 +1044,21 @@ no ground truth the check it with.
 
 Graphs: 
 
+For simulated data, single timeseries:
+
 For \{delta, DC/Spline\}, \{exponential, gaussian, cauchy\}, \{biased, unbiased initial\},
 \{100, 500, 1000\} particles
 \begin{enumerate}
-\item Comparison with a linear system with similar number of degrees of freedom
 \item Ground truth vs. Estimated signal during particle filter run
 \item Ground truth vs. Estimated signal with final parameter set
 \item True Parameters vs. Final Parameter Sets
-\item Variance of final parameters when faced with same ground truth, different noise
 \item Variance of final parameters when faced with same ground truth, different noise
 \item MSE of (a new timeseries based on X(t) vs. ground truth) for all t
 \item Estimator Variance based on different noise runs
 \item Final Particle Distribution
 \end{enumerate}
+
+For Simulated Data, Full Volume:
 
 %note to self, epsilon should probably be uniform between 0 and something
 \subsection{Simulated Volume}
